# Jobs-Scheduler

./: CMakeLists.txt
src/: DataContainer.cpp  DataContainer.h  Job.cpp  Job.h  Machine.cpp  Machine.h  RandomUtil.cpp  RandomUtil.h  Resource.cpp  Resource.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  main.cpp
test/: Best.csv  benchmark.py
